--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -1197,7 +1197,7 @@ a {
 
 .navbar-logo-left-container.shadow-three {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1500px;
   margin-bottom: 0;
   padding: 20px 0;
 }
@@ -1210,7 +1210,7 @@ a {
 }
 
 .navbar-wrapper {
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   display: flex;
 }
@@ -1225,9 +1225,9 @@ a {
 .nav-link {
   color: #e1e1e0;
   letter-spacing: .25px;
-  margin-left: 5px;
-  margin-right: 5px;
-  padding: 5px 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 5px 0;
   font-size: 14px;
   line-height: 20px;
   text-decoration: none;
@@ -4556,8 +4556,7 @@ a {
 .dash_h1 {
   color: #e1e1e0;
   text-shadow: 6px 6px 9px #11151d99;
-  margin-top: 9px;
-  margin-bottom: 9px;
+  margin: 9px 30px;
   font-family: Poppins, sans-serif;
   font-size: 64px;
   font-weight: 600;
@@ -4568,6 +4567,11 @@ a {
   flex-wrap: wrap;
   max-width: 600px;
   display: flex;
+}
+
+.dash_contain {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .relative {
@@ -4641,9 +4645,7 @@ a {
   align-items: center;
   margin-top: 0;
   margin-left: 0;
-  padding-top: 75px;
-  padding-bottom: 2rem;
-  padding-left: 30px;
+  padding: 75px 60px 2rem;
   position: relative;
   overflow: visible;
 }
@@ -4905,7 +4907,7 @@ a {
   background-color: #2b2f35;
   border-radius: 15.4px;
   align-items: stretch;
-  padding: 20px;
+  padding: 20px 30px;
   display: flex;
   overflow: hidden;
 }
@@ -5431,6 +5433,72 @@ a {
   text-decoration: none;
 }
 
+.hero-heading-left-2 {
+  color: #11151d;
+  background-color: #11151d;
+  border-bottom: 1px solid #e4ebf3;
+  height: 800px;
+  padding: 90px 30px 80px;
+  position: relative;
+}
+
+.container-25 {
+  width: 100%;
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-wrapper-5 {
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 60px;
+  display: flex;
+}
+
+.hero-split-4 {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  max-width: 46%;
+  display: flex;
+}
+
+.margin-bottom-24px-5 {
+  color: #e1e1e0;
+  margin-bottom: 24px;
+  font-weight: 500;
+}
+
+.button-primary-4 {
+  color: #fff;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  background-color: #1a1b1f;
+  padding: 12px 25px;
+  font-size: 12px;
+  line-height: 20px;
+  transition: all .2s;
+}
+
+.button-primary-4:hover {
+  color: #fff;
+  background-color: #32343a;
+}
+
+.button-primary-4:active {
+  background-color: #43464d;
+}
+
+.heading-22 {
+  color: #e1e1e0;
+  line-height: 74px;
+}
+
+.body-15 {
+  background-color: #2b2f35;
+}
+
 @media screen and (max-width: 991px) {
   .container-2 {
     max-width: 728px;
@@ -5952,6 +6020,22 @@ a {
     grid-row-gap: 50px;
     grid-template-columns: 1fr;
   }
+
+  .container-25 {
+    max-width: 728px;
+  }
+
+  .hero-wrapper-5 {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: -40px;
+  }
+
+  .hero-split-4 {
+    max-width: 100%;
+    margin-bottom: 40px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -6395,6 +6479,11 @@ a {
   .testimonial-quote-copy {
     margin-left: 15.46px;
     margin-right: 15.46px;
+  }
+
+  .hero-heading-left-2 {
+    height: 700px;
+    padding: 60px 15px;
   }
 }
 
@@ -6921,6 +7010,19 @@ a {
 
   .container-9-copy {
     max-width: none;
+  }
+
+  .hero-heading-left-2 {
+    height: 600px;
+  }
+
+  .container-25 {
+    max-width: none;
+  }
+
+  .heading-22 {
+    font-size: 30px;
+    line-height: 35px;
   }
 }
 
