--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -925,7 +925,7 @@ a {
 
 .container {
   flex: 1;
-  max-width: 2000px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1225,6 +1225,7 @@ a {
 .nav-link {
   color: #e1e1e0;
   letter-spacing: .25px;
+  white-space: nowrap;
   margin-left: 10px;
   margin-right: 10px;
   padding: 5px 0;
